--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -86,7 +86,7 @@ $(document).ready(function(){
         }
         else
         {
-            window.location.href = "../triviapage/triviapage.html";
+            $('.main-div').hide()
         }
 
     })
