--- a/triviapage/triviapage.html
+++ b/triviapage/triviapage.html
@@ -26,5 +26,11 @@
 </head>
 <body>
     
+    <script>
+    
+    $(document).ready(function(){
+        console.log(localStorage.getItem("shalom"))
+    })
+    </script>
 </body>
 </html>
