work in progress

--- a/triviapage/triviapage.html
+++ b/triviapage/triviapage.html
@@ -25,12 +25,12 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script>
-    
-    $(document).ready(function(){
-        console.log(localStorage.getItem("shalom"))
-    })
-    </script>
+<h1 id="h1">test</h1> 
+<button id="b1">press me</button>
+<div id="score">Score:</div>
+<div id="output"></div>
+<div id="selectAnswers"></div>
+<script src="script.js"></script>
+
 </body>
 </html>
