--- a/triviapage/triviapage.html
+++ b/triviapage/triviapage.html
@@ -20,22 +20,24 @@
 
     <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
-    
-    <div>Score : <span id="score"></span></div>
-    <div id="output"></div>
-    <div id="selectAnswers"></div>
-    <button id="b1">click me for a question</button>
-    <button id="b2">continiue to joke</button>
-    <script src="script.js"></script>
-    <a href='../homepage/homepage.html'>back to homepage</a>
+    <center>
+        <div id="trivia">
+            <h2 id="score"> Score : <span id="score"></span></h2>
+            <div id="output"></div>
+            <div id="selectAnswers"></div>
+            <button id="b1" style="vertical-align:middle"><span>Let's Start!</span></button>
+            <button id="b2">continiue to joke</button>
+            <script src="script.js"></script>
+            <a href='../homepage/homepage.html'><img id="home" src="home.png"></a>
+        </div>
+    </center>
 
 </body>
 
