--- a/triviapage/triviapage.html
+++ b/triviapage/triviapage.html
@@ -33,7 +33,7 @@
             <div id="output"></div>
             <div id="selectAnswers"></div>
             <button id="b1" style="vertical-align:middle"><span>Let's Start!</span></button>
-            <button id="b2">continiue to joke</button>
+            <button id="b2" onclick="window.location.href = '../jokespage/jokespage.html'">continiue to joke</button>
             <script src="script.js"></script>
             <a href='../homepage/homepage.html'><img id="home" src="home.png"></a>
         </div>
