--- a/triviapage/triviapage.html
+++ b/triviapage/triviapage.html
@@ -31,7 +31,7 @@
         <div id="trivia">
             <h2 id="score"> Score : <span id="score"></span></h2>
             <div id="output"></div>
-            <div id="selectAnswers"></div>
+            <p id="selectAnswers"></p>
             <button id="b1" style="vertical-align:middle"><span>Let's Start!</span></button>
             <button id="b2" onclick="window.location.href = '../jokespage/jokespage.html'">continiue to joke</button>
             <script src="script.js"></script>
